<resources>
    <string name="app_name">Serving Size Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="add_pot">Add Pot</string>
    <string name="title_activity_calculate_pot">CalculatePot</string>
    <string name="pot_name">Pot Name</string>
    <string name="pot_weight">Pot Weight (g)</string>
    <string name="enter_pot_title">New Pot Entry</string>
    <string name="edit_pot">Edit Pot</string>
    <string name="delete_pot">Delete Pot</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="pot">Pot</string>
    <string name="weight_empty">Weight empty (g)</string>
    <string name="weight_with_food">Weight with food (g)</string>
    <string name="weight_of_food">Weight of food (g)</string>
    <string name="number_of_servings"># Servings</string>
    <string name="serving_weight">Serving Weight</string>
    <string name="testweight">testWeight</string>
    <string name="testname">testName</string>
    <string name="food_weight_g">Food Weight (g)</string>
    <string name="weight_of_food_g">Weight of food (g)</string>
    <string name="testservingweight">testServingWeight</string>
    <string name="of_servings"># of Servings</string>
    <string name="testfoodweight">testFoodWeight</string>
    <string name="enter_food_weight">Enter Food Weight</string>
    <string name="disclaimer1">\nOptional Implementations:\n
4.1 - Edit Pot\n
4.2 - Delete Pot\n
4.3 - Error Checking Input\n
4.4 - Save Data\n
4.5 - Action Bar Buttons\n\n
Tap and hold to edit/delete a Pot\n
using the Action Bar</string>
    <string name="default_value_of_0">0</string>
    <string name="edit">EDIT</string>
    <string name="pot_name_error">Pot Name must be at least 1 character</string>
    <string name="pot_weight_error">Pot Weight must be a positive number</string>


</resources>
