<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_calculate_pot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sfu.timr.servingsizecalculator.CalculateServingActivity">

    <TextView
        android:text="@string/pot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pot"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calculate_pot_back_button"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/servingWeight"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/number_of_servings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberServings"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/weightWithFood"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/serving_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/servingWeight"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/numberServings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/weight_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightEmpty"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/pot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPotWeight"
        android:text="@string/testweight"
        android:layout_alignBaseline="@+id/weightEmpty"
        android:layout_alignBottom="@+id/weightEmpty"
        android:layout_alignLeft="@+id/textPotName"
        android:layout_alignStart="@+id/textPotName" />

    <TextView
        android:text="@string/testname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPotName"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/calculate_pot_back_button"
        android:layout_toStartOf="@+id/calculate_pot_back_button" />

    <TextView
        android:text="@string/weight_with_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weightWithFood"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/weightEmpty"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/potWithFood"
        android:layout_width="150dp"
        android:layout_alignBaseline="@+id/weightWithFood"
        android:layout_alignBottom="@+id/weightWithFood"
        android:layout_alignLeft="@+id/textPotWeight"
        android:layout_alignStart="@+id/textPotWeight"
        android:hint="@string/food_weight_g" />

</RelativeLayout>
