<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_pot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sfu.timr.servingsizecalculator.EnterPotActivity">

    <TextView
        android:text="@string/pot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/pot_name_title" />

    <TextView
        android:text="@string/pot_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:id="@+id/pot_weight_title"
        android:layout_below="@+id/pot_name_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textAutoCorrect|textAutoComplete"
        android:ems="10"
        android:id="@+id/pot_name_entry"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/pot_weight_entry"
        android:layout_alignStart="@+id/pot_weight_entry"
        android:hint="@string/pot_name"
        android:capitalize="words"
        android:textIsSelectable="true"
        android:nextFocusDown="@id/pot_weight_entry"
        android:singleLine="true"
        android:selectAllOnFocus="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/pot_weight_entry"
        android:layout_alignBaseline="@+id/pot_weight_title"
        android:layout_alignBottom="@+id/pot_weight_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:hint="@string/pot_weight" />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/enter_pot_add_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/pot_weight_entry"
        android:layout_alignLeft="@+id/pot_weight_entry"
        android:layout_alignStart="@+id/pot_weight_entry"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/enter_pot_cancel_button"
        android:layout_alignBaseline="@+id/enter_pot_add_button"
        android:layout_alignBottom="@+id/enter_pot_add_button"
        android:layout_alignRight="@+id/pot_weight_entry"
        android:layout_alignEnd="@+id/pot_weight_entry"
        style="@style/Widget.AppCompat.Button.Colored" />


</RelativeLayout>
